examples/tests/invalid/unknown_symbol.w
let bucket = new cloud.Bucket();

let x = 2 + y;
